Remove legacy 'flyout' implementation
ERM32026

[REL1_39, REL1_39-4.4.x, master]

Change-Id: I5e5b034a11efd2813c38c086a1b7066d3aa7175d
(cherry picked from commit 7916f7cf5bce30247d6b4dd89520ab7a437539b3)

--- a/resources/bluespice.readers.infoDialog.less
+++ b/resources/bluespice.readers.infoDialog.less
@@ -1,8 +1,8 @@
-.bs-readers-flyout {
+.bs-readers-info-dialog {
 	.x-grid-row {
 		height: 47px;
 	}
-	.bs-readers-flyout-grid-item {
+	.bs-readers-info-dialog-item {
 		.bs-userminiprofile {
 			display: inline-block;
 			width: 40px;
